HLT-2885 Fix bold fonts to proper family. Disable the hiding of the nav bar using JS. It's completely disabling the back button on iphone

--- a/src/main/webapp/bundles/health_v2/less/benefitsStepj13.less
+++ b/src/main/webapp/bundles/health_v2/less/benefitsStepj13.less
@@ -6,10 +6,8 @@
 
 }
 
-@media (@sm) {
-  .hideNavbar {
-    display: none !important;
-  }
+.hideNavbar {
+  display: none !important;
 }
 
 #benefitsForm .quoteSnapshot.j13abtest {
@@ -155,7 +153,7 @@ fieldset {
         &:checked {
           + label {
             line-height: 0.3em;
-            font-weight: bold;
+            font-family: @font-family-theme-bold;
             &:before {
               font-family: 'framework_font';
               content: "\e600";
